--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         <div id="japanese"></div>
         <div id="english"></div>
         <input class="button" type="button" value="GET QUOTE" onclick="getQuote()">
+        <audio id="audioPlayer" loop>
+            <source src="Romantic Traditional Japanese Music - Free Copyright.mp3" type="audio/mp3">
+        </audio>
+        <input id="audioBtn" type="button" onclick="getAudio()">
     </div>
+</div>
+
 
 </div>
 <script src="javascript.js"></script>
