--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="english"></div>
         <input class="button" type="button" value="GET QUOTE" onclick="getQuote()">
         <audio id="audioPlayer" loop>
-            <source src="Romantic Traditional Japanese Music - Free Copyright.mp3" type="audio/mp3">
+            <source src="media/Romantic%20Traditional%20Japanese%20Music%20-%20Free%20Copyright.mp3" type="audio/mp3">
         </audio>
         <input id="audioBtn" type="button" onclick="getAudio()">
     </div>
